--- a/src/FinalProjectDataExploration.ipynb
+++ b/src/FinalProjectDataExploration.ipynb
@@ -2,8 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8b03dabf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly\n",
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "281f30ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b532e8c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +38,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 ('finalproj')",
    "language": "python",
    "name": "python3"
   },
@@ -25,7 +52,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "01736c6fa304236c2b7d5be93725ba564622a8e014d23fe88690836451f6088f"
+   }
   }
  },
  "nbformat": 4,
