--- a/src/FinalProjectDataExploration.ipynb
+++ b/src/FinalProjectDataExploration.ipynb
@@ -6354,11 +6354,7 @@
    "id": "05ef1e83",
    "metadata": {},
    "source": [
-    "Usless fields:\n",
-    "frame.number: only shows sequence of packets - has nothing to do with with attack traffic. Unless we use it to caculate total attack traffic length in packets\n",
-    "frame.time_epoch\n",
-    "\n",
-    "Still a lot of features have NaN values"
+    "#### Need to convert data to categorical values before performing PCA - So far able to prune NaN columns and replace leftover NaN with 0 or unknown"
    ]
   },
   {
