--- a/src/FinalProjectDataExploration.ipynb
+++ b/src/FinalProjectDataExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 374,
    "id": "8b03dabf",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 375,
    "id": "281f30ff",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 376,
    "id": "b532e8c9",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 377,
    "id": "87592e02",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 378,
    "id": "b878bf94",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 379,
    "id": "bcbb2c65",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 380,
    "id": "86498c8a",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 381,
    "id": "2b838e42",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 382,
    "id": "da4b19e3",
    "metadata": {},
    "outputs": [
@@ -4109,7 +4109,7 @@
        "13                     NaN                NaN  Normal  "
       ]
      },
-     "execution_count": 360,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4129,7 +4129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 383,
    "id": "9a24dd47",
    "metadata": {},
    "outputs": [
@@ -4177,7 +4177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -5066,7 +5066,7 @@
        "13                  NaN  Normal  "
       ]
      },
-     "execution_count": 362,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5083,7 +5083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 385,
    "id": "bd7e60f3",
    "metadata": {},
    "outputs": [
@@ -5974,7 +5974,7 @@
        "13             Unknown              Unknown  Normal  "
       ]
      },
-     "execution_count": 363,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6009,7 +6009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 386,
    "id": "bc23347d",
    "metadata": {},
    "outputs": [],
@@ -6018,23 +6018,26 @@
     "    cnt_num = 0\n",
     "    cnt = 0\n",
     "    non_num_feature = []\n",
+    "    num_feature = []\n",
     "    for col in df.columns:\n",
     "        if (df[col].dtypes == \"int64\") or (df[col].dtypes == \"float64\"):\n",
     "            cnt_num += 1\n",
+    "            num_feature.append(col)\n",
     "        else:\n",
     "            #print(\"string col:\", col, df[col].dtypes)\n",
     "            cnt += 1\n",
     "            non_num_feature.append(col)\n",
     "\n",
     "    print(\"Numeric count and non numeric count: \",cnt_num, cnt)\n",
+    "    print(\"Numeric features: \" + str(cnt_num) + \" ; Non-numeric features: \" + str(cnt))\n",
     "    print(\"Non numeric columns: \", non_num_feature)\n",
     "    \n",
-    "    return non_num_feature"
+    "    return non_num_feature, num_feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 387,
    "id": "aaed8bf5",
    "metadata": {},
    "outputs": [
@@ -6412,7 +6415,7 @@
        "13              Unknown  Normal  "
       ]
      },
-     "execution_count": 365,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6431,7 +6434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 388,
    "id": "99af2ff6",
    "metadata": {},
    "outputs": [
@@ -6461,7 +6464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 389,
    "id": "bd7adb43",
    "metadata": {},
    "outputs": [],
@@ -6481,53 +6484,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
-   "id": "c113c318",
+   "execution_count": 397,
+   "id": "8c1d0589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "udp_feaures = ['udp.dstport', 'udp.srcport', 'udp.length', 'udp.time_delta']\n",
+    "\n",
+    "for col in udp_feaures:\n",
+    "    df[col] = df[col].astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "id": "f2c8ac62",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numeric count and non numeric count:  36 21\n",
-      "Non numeric columns:  ['frame.time', 'radiotap.present.tsft', 'radiotap.rxflags', 'wlan.fc.ds', 'llc', 'ip.proto', 'ip.ttl', 'ip.version', 'udp.dstport', 'udp.srcport', 'udp.length', 'udp.payload', 'udp.time_relative', 'udp.time_delta', 'ssdp', 'http.host', 'http.request.full_uri', 'http.request.line', 'http.request.method', 'http.request.version', 'Label']\n"
+      "Numeric count and non numeric count:  40 17\n",
+      "Non numeric columns:  ['frame.time', 'radiotap.present.tsft', 'radiotap.rxflags', 'wlan.fc.ds', 'llc', 'ip.proto', 'ip.ttl', 'ip.version', 'udp.payload', 'udp.time_relative', 'ssdp', 'http.host', 'http.request.full_uri', 'http.request.line', 'http.request.method', 'http.request.version', 'Label']\n",
+      "['frame.time', 'radiotap.present.tsft', 'radiotap.rxflags', 'wlan.bssid', 'wlan.da', 'wlan.fc.ds', 'wlan.ra', 'wlan.sa', 'wlan.ta', 'llc', 'ip.dst', 'ip.proto', 'ip.src', 'ip.ttl', 'ip.version', 'ssdp', 'http.host', 'http.request.full_uri', 'http.request.line', 'http.request.method', 'http.request.version', 'Label']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['frame.time',\n",
-       " 'radiotap.present.tsft',\n",
-       " 'radiotap.rxflags',\n",
-       " 'wlan.fc.ds',\n",
-       " 'llc',\n",
-       " 'ip.proto',\n",
-       " 'ip.ttl',\n",
-       " 'ip.version',\n",
-       " 'udp.dstport',\n",
-       " 'udp.srcport',\n",
-       " 'udp.length',\n",
-       " 'udp.payload',\n",
-       " 'udp.time_relative',\n",
-       " 'udp.time_delta',\n",
-       " 'ssdp',\n",
-       " 'http.host',\n",
-       " 'http.request.full_uri',\n",
-       " 'http.request.line',\n",
-       " 'http.request.method',\n",
-       " 'http.request.version',\n",
-       " 'Label']"
-      ]
-     },
-     "execution_count": 368,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"wlan.bssid\"].value_counts()\n",
-    "\n",
-    "check_feature_type(df)"
+    "check_feature_type(df)\n",
+    "print(non_num_feature)"
    ]
   },
   {
@@ -6548,7 +6534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 392,
    "id": "43e16a23",
    "metadata": {},
    "outputs": [
@@ -6591,25 +6577,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 393,
    "id": "df8024fd",
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "could not convert string to float: 'Dec 13- 2020 21:02:03.388055000 GTB Standard Time'",
+     "evalue": "could not convert string to float: 'Dec 13- 2020 21:02:03.236097000 GTB Standard Time'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb Cell 30\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=20'>21</a>\u001b[0m   plt\u001b[39m.\u001b[39mylabel(\u001b[39m\"\u001b[39m\u001b[39mVariance\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=22'>23</a>\u001b[0m n_components \u001b[39m=\u001b[39m [ \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m20\u001b[39m, \u001b[39m30\u001b[39m, \u001b[39m40\u001b[39m, \u001b[39m50\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=23'>24</a>\u001b[0m PCA_1(n_components)\n",
-      "\u001b[1;32m/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb Cell 30\u001b[0m in \u001b[0;36mPCA_1\u001b[0;34m(k)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(k)):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=8'>9</a>\u001b[0m   pca \u001b[39m=\u001b[39m PCA(n_components\u001b[39m=\u001b[39mk[i])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=9'>10</a>\u001b[0m   pca\u001b[39m.\u001b[39;49mfit(train_data)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=10'>11</a>\u001b[0m   var_components \u001b[39m=\u001b[39m pca\u001b[39m.\u001b[39mexplained_variance_ratio_\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=11'>12</a>\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mk = \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(k[i]) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m ; Variance = \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(np\u001b[39m.\u001b[39msum(var_components)))\n",
+      "\u001b[1;32m/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb Cell 31\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=20'>21</a>\u001b[0m   plt\u001b[39m.\u001b[39mylabel(\u001b[39m\"\u001b[39m\u001b[39mVariance\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=22'>23</a>\u001b[0m n_components \u001b[39m=\u001b[39m [ \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m20\u001b[39m, \u001b[39m30\u001b[39m, \u001b[39m40\u001b[39m, \u001b[39m50\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=23'>24</a>\u001b[0m PCA_1(n_components)\n",
+      "\u001b[1;32m/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb Cell 31\u001b[0m in \u001b[0;36mPCA_1\u001b[0;34m(k)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(k)):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=8'>9</a>\u001b[0m   pca \u001b[39m=\u001b[39m PCA(n_components\u001b[39m=\u001b[39mk[i])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=9'>10</a>\u001b[0m   pca\u001b[39m.\u001b[39;49mfit(train_data)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=10'>11</a>\u001b[0m   var_components \u001b[39m=\u001b[39m pca\u001b[39m.\u001b[39mexplained_variance_ratio_\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/manasg/Downloads/Final_project_ML/MlFinalProject/src/FinalProjectDataExploration.ipynb#ch0000016?line=11'>12</a>\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mk = \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(k[i]) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m ; Variance = \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(np\u001b[39m.\u001b[39msum(var_components)))\n",
       "File \u001b[0;32m~/Downloads/Final_project_ML/MlFinalProject/finalproj/lib/python3.9/site-packages/sklearn/decomposition/_pca.py:408\u001b[0m, in \u001b[0;36mPCA.fit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    385\u001b[0m \u001b[39m\"\"\"Fit the model with X.\u001b[39;00m\n\u001b[1;32m    386\u001b[0m \n\u001b[1;32m    387\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[39m    Returns the instance itself.\u001b[39;00m\n\u001b[1;32m    400\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    401\u001b[0m check_scalar(\n\u001b[1;32m    402\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_oversamples,\n\u001b[1;32m    403\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mn_oversamples\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    404\u001b[0m     min_val\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m    405\u001b[0m     target_type\u001b[39m=\u001b[39mnumbers\u001b[39m.\u001b[39mIntegral,\n\u001b[1;32m    406\u001b[0m )\n\u001b[0;32m--> 408\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_fit(X)\n\u001b[1;32m    409\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
       "File \u001b[0;32m~/Downloads/Final_project_ML/MlFinalProject/finalproj/lib/python3.9/site-packages/sklearn/decomposition/_pca.py:456\u001b[0m, in \u001b[0;36mPCA._fit\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    450\u001b[0m \u001b[39mif\u001b[39;00m issparse(X):\n\u001b[1;32m    451\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m    452\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mPCA does not support sparse input. See \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    453\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mTruncatedSVD for a possible alternative.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    454\u001b[0m     )\n\u001b[0;32m--> 456\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[1;32m    457\u001b[0m     X, dtype\u001b[39m=\u001b[39;49m[np\u001b[39m.\u001b[39;49mfloat64, np\u001b[39m.\u001b[39;49mfloat32], ensure_2d\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, copy\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcopy\n\u001b[1;32m    458\u001b[0m )\n\u001b[1;32m    460\u001b[0m \u001b[39m# Handle n_components==None\u001b[39;00m\n\u001b[1;32m    461\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_components \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
       "File \u001b[0;32m~/Downloads/Final_project_ML/MlFinalProject/finalproj/lib/python3.9/site-packages/sklearn/base.py:577\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    575\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mValidation should be done on X, y or both.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    576\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m no_val_y:\n\u001b[0;32m--> 577\u001b[0m     X \u001b[39m=\u001b[39m check_array(X, input_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mX\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mcheck_params)\n\u001b[1;32m    578\u001b[0m     out \u001b[39m=\u001b[39m X\n\u001b[1;32m    579\u001b[0m \u001b[39melif\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_y:\n",
       "File \u001b[0;32m~/Downloads/Final_project_ML/MlFinalProject/finalproj/lib/python3.9/site-packages/sklearn/utils/validation.py:856\u001b[0m, in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    854\u001b[0m         array \u001b[39m=\u001b[39m array\u001b[39m.\u001b[39mastype(dtype, casting\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munsafe\u001b[39m\u001b[39m\"\u001b[39m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    855\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 856\u001b[0m         array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(array, order\u001b[39m=\u001b[39;49morder, dtype\u001b[39m=\u001b[39;49mdtype)\n\u001b[1;32m    857\u001b[0m \u001b[39mexcept\u001b[39;00m ComplexWarning \u001b[39mas\u001b[39;00m complex_warning:\n\u001b[1;32m    858\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    859\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mComplex data not supported\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(array)\n\u001b[1;32m    860\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39mcomplex_warning\u001b[39;00m\n",
       "File \u001b[0;32m~/Downloads/Final_project_ML/MlFinalProject/finalproj/lib/python3.9/site-packages/pandas/core/generic.py:2064\u001b[0m, in \u001b[0;36mNDFrame.__array__\u001b[0;34m(self, dtype)\u001b[0m\n\u001b[1;32m   2063\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__array__\u001b[39m(\u001b[39mself\u001b[39m, dtype: npt\u001b[39m.\u001b[39mDTypeLike \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m np\u001b[39m.\u001b[39mndarray:\n\u001b[0;32m-> 2064\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49masarray(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_values, dtype\u001b[39m=\u001b[39;49mdtype)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Dec 13- 2020 21:02:03.388055000 GTB Standard Time'"
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Dec 13- 2020 21:02:03.236097000 GTB Standard Time'"
      ]
     }
    ],
